# biomass-simulation-resources

./: .gitattributes  CMakeLists.txt  Dockerfile  Dockerfile.ros2  README.md  docker-compose.ros2.yml  docker-compose.yml  package.xml  run-world.sh
env-hooks/: 50.biomass_simulation_resources.sh
launch/: view_world.launch  view_world_template.launch
models/green_ground/: model.config  model.sdf
models/world_jean_tree/: model.sdf
worlds/: forest_1.world  world_jean.world  world_template.world
