<?xml version="1.0"?>
<package format="3">
  <name>biomass_simulation_resources</name>
  <version>0.1.0</version>
  <description>Reusable ROS package with Gazebo models and worlds for forest simulation scenarios.</description>

  <maintainer email="d.romagnolo@hotmail.com">Débora Ramos Romagnolo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
