<?xml version="1.0"?>
<package format="2">
  <name>biomass_simulation_resources</name>
  <version>0.1.0</version>
  <description>Reusable ROS package with Gazebo models and worlds for forest simulation scenarios.</description>

  <maintainer email="d.romagnolo@hotmail.com">Debora Ramos Romagnolo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export />
</package>
